# Personal-Knowledge-OS

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  worker.py
frontend/: Dockerfile  index.html  package.json
frontend/src/components/: GraphView.tsx  Header.tsx  NoteEditor.tsx  NoteList.tsx  NoteView.tsx  SearchResults.tsx  Sidebar.tsx
frontend/src/hooks/: useNotes.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
prisma/: schema.prisma
prisma/migrations/20250428182403_make_embedding_384/: migration.sql
scripts/: migrate.py
src/: main.py
src/core/: config.py  database.py
src/routers/: links.py  notes.py
src/schemas/: note.py
src/services/: audit_service.py  gemini_service(copy).py  gemini_service.py  linking_service.py  note_services.py  redis_service.py  vector_services.py
